# mpcq

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: lint.yaml  pip-build-lint-test-coverage.yml  publish.yaml
docs/: Makefile  requirements.txt
docs/source/: api_reference.rst  bigquery_dataset.rst  branch_evaluation_2026_04_04.rst  changelog.rst  community.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  integration.rst  quickstart.rst
mpcq/: __init__.py  client.py  observation.py  orbit.py  utils.py  version.py
mpcq/tests/: test_integration.py  test_submission.py  test_utils.py
src/mpcq/: __init__.py  _version.py  client.py  identifications.py  manager.py  observation.py  observations.py  orbits.py  qvsql.py  submission.py  submissions.py  utils.py
src/mpcq/client/: __init__.py  bigquery.py  client.py  postgres.py
src/mpcq/experimental/: __init__.py  client.py  manager.py  observations.py  orbits.py  qvsql.py  submissions.py  utils.py
src/mpcq/submissions/: __init__.py  config.py  manager.py  mpc.py  types.py  utils.py  wamo.py
src/mpcq/submissions/tests/: conftest.py  test_manager_data.py  test_manager_init.py  test_manager_integration.py  test_manager_prepare.py  test_manager_queue.py  test_manager_submit.py  test_manager_submitters.py  test_utils.py
src/mpcq/submissions_experiment/: manager.py  mpc.py  types.py  utils.py  wamo.py
src/mpcq/tests/: test_client.py  test_cross_match.py  test_imports.py  test_integration.py  test_integration_bigquery.py  test_qvsql.py  test_submission.py  test_utils.py
src/mpcq/tests/data/: final_results.parquet  matched_results.parquet
src/mpcq/tools/: __init__.py  introspect.py
