[project]
name = "mpcq"
dynamic = ["version", "readme"]
requires-python = ">=3.9"

dependencies = [
    "adam_core @ git+https://git@github.com/B612-Asteroid-Institute/adam_core#egg=adam_core",
    "sqlalchemy < 2",
    "pandas",
    "astropy",
    "quivr",
    "google-cloud-secret-manager",
    "cloud-sql-python-connector[pg8000]",
    "pg8000",
]

[project.optional-dependencies]
tests = ["pre-commit", "pytest", "black", "isort"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.isort]
profile = "black"
