[project]
name = "mpcq"
dynamic = ["version"]
authors = [
  { name = "Spencer Nelson", email = "spencer@b612foundation.org" },
  { name = "Nate Tellis", email = "nate@b612foundation.org" },
  { name = "Alec Koumjian", email = "alec@b612foundation.org" },
  { name = "Joachim Moeyens", email = "moeyensj@uw.edu" },
]
description = "Client library for interacting with an MPC observations database"
readme = "README.md"
requires-python = ">=3.11,<3.13"
classifiers = [
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Astronomy",
]
license = { file = "LICENSE.md" }

keywords = ["astronomy", "orbital mechanics", "propagation"]

dependencies = [
    "adam_core>=0.5.1",
    "astropy",
    "google-cloud-bigquery",
    "google-cloud-secret-manager",
    "numpy",
    "pyarrow>=21.0.0",
    "quivr",
    "google-cloud-bigquery-storage>=2.27.0",
    "tqdm>=4.67.1"
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
[tool.pdm.build]
package-dir = "src"
includes = ["src/mpcq/"]

[tool.pdm.version]
source = "scm"
write_to = "src/mpcq/_version.py"
write_template = "__version__ = '{}'"


[tool.pdm.scripts]
check = { composite = ["format", "lint", "typecheck", "test"] }
format = { composite = ["ruff format ./src/mpcq"] }
lint = { composite = [
  "ruff check ./src/mpcq",
] }
fix = { composite = ["ruff format ./src/mpcq", "ruff check --fix ./src/mpcq"] }
typecheck = "mypy --strict ./src/mpcq"

test = "pytest --benchmark-disable {args}"
doctest = "pytest --doctest-plus --doctest-only"
benchmark = "pytest --benchmark-only"
coverage = "pytest --cov=mpcq --cov-report=xml"

# Documentation commands
docs-build = "sphinx-build -b html docs/source docs/build"
docs-clean = { shell = "rm -rf docs/build" }
docs-serve = { shell = "python -m http.server --directory docs/build" }
docs-live = "sphinx-autobuild docs/source docs/build"


[project.urls]
"Documentation" = "https://github.com/B612-Asteroid-Institute/mpcq#README.md"
"Issues" = "https://github.com/B612-Asteroid-Institute/mpcq/issues"
"Source" = "https://github.com/B612-Asteroid-Institute/mpcq"


[project.optional-dependencies]
dev = [
    "ipython",
    "mypy",
    "pdm",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-doctestplus",
    "pytest-mock>=3.14.1",
    "pytest>=8.4.1",
    "ruff",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
    "sphinx-autobuild",
    "pandas>=2.3.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["build"]

[tool.ruff.lint]
ignore = []
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["mpcq"]

[tool.mypy]
ignore_missing_imports = true
