[metadata]
name = mpcq

[options]
python_requires = >= 3.9
packages = find:
setup_requires =
    setuptools >= 45
    wheel
    setuptools_scm >= 6.0
install_requires =
    sqlalchemy < 2
    pandas
    astropy
    google-cloud-secret-manager
    cloud-sql-python-connector[pg8000]
    pg8000

[options.extras_require]
tests =
    pre-commit
    pytest

[tool.setuptools_scm]

[tool.black]
line-length = 110

[flake8]
max_line_length = 110
ignore =
    W503
    E203
exclude =
    build

[tool.isort]
profile = black

[tool:pytest]
filterwarnings =
    ignore::DeprecationWarning:astropy
markers =
    integration: mark a test as an slow end-to-end integration test
