[metadata]
name = mpcq
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:

[tool.black]
line-length = 110

[flake8]
max_line_length = 110
ignore =
    W503
    E203
exclude =
    build

[tool.isort]
profile = black

[tool:pytest]
filterwarnings =
    ignore::DeprecationWarning:astropy
markers =
    integration: mark a test as an slow end-to-end integration test
